--- a/index.html
+++ b/index.html
@@ -293,77 +293,77 @@
       </section>
       <!-- conunter Section design end -->
       <!-- Our Work Section design start -->
-      <section
-        class="max-w-6xl mx-auto bg-white mt-24 mb-11 border-dashed border-2 border-gray-200"
-      >
-        <div class="text-center mb-8">
-          <button
-            class="bg-gray-200 text-gray-600 px-4 py-2 rounded-full text-lg font-bold mb-4"
-          >
-            → How we work
-          </button>
-          <h1 class="text-5xl font-bold text-gray-900">Our Works Process</h1>
-          <p class="text-gray-600 mt-3">
-            The barn house captivates with its blend of rustic charm and modern
-            sophistication, <br />
-            featuring weathered wood, sleek metal accents.
-          </p>
-        </div>
-
-        <!-- Process Cards -->
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
-          <!-- Concept Card -->
-          <div class="bg-[#E7C1D3] p-6 rounded-lg shadow">
-            <div class="text-gray-700 mb-4">
-              <img src="assets/concept.png" alt="" />
-            </div>
-            <h2 class="text-lg font-semibold text-gray-800 mb-2">Concept</h2>
-            <p class="text-gray-600 text-sm">
+      <section class="bg-gray-100 mt-24 mb-11 py-12">
+        <div class="max-w-6xl mx-auto border-dashed border-2 border-gray-200">
+          <div class="text-center mb-8">
+            <button
+              class="bg-gray-200 text-gray-600 px-4 py-2 rounded-full text-lg font-bold mb-4"
+            >
+              <i class="fa-solid fa-arrow-right pr-3"></i>How we work
+            </button>
+            <h1 class="text-5xl font-bold text-gray-900">Our Works Process</h1>
+            <p class="text-gray-600 mt-3">
               The barn house captivates with its blend of rustic charm and
-              modern.
+              modern sophistication, <br />
+              featuring weathered wood, sleek metal accents.
             </p>
           </div>
 
-          <!-- Design Process Card -->
-          <div class="bg-[#EFDA6E] p-6 rounded-lg shadow">
-            <div class="text-gray-700 mb-4">
-              <img src="assets/flow-chart.png" alt="" />
+          <!-- Process Cards -->
+          <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
+            <!-- Concept Card -->
+            <div class="bg-[#E7C1D3] p-6 rounded-lg shadow">
+              <div class="text-gray-700 mb-4">
+                <img src="assets/concept.png" alt="" />
+              </div>
+              <h2 class="text-lg font-semibold text-gray-800 mb-2">Concept</h2>
+              <p class="text-gray-600 text-sm">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
             </div>
-            <h2 class="text-lg font-semibold text-gray-800 mb-2">
-              Design Process
-            </h2>
-            <p class="text-gray-600 text-sm">
-              The barn house captivates with its blend of rustic charm and
-              modern.
-            </p>
-          </div>
 
-          <!-- Supervision Card -->
-          <div class="bg-[#A4DAC3] p-6 rounded-lg shadow">
-            <div class="text-gray-700 mb-4">
-              <img src="assets/vision.png" alt="" />
+            <!-- Design Process Card -->
+            <div class="bg-[#EFDA6E] p-6 rounded-lg shadow">
+              <div class="text-gray-700 mb-4">
+                <img src="assets/flow-chart.png" alt="" />
+              </div>
+              <h2 class="text-lg font-semibold text-gray-800 mb-2">
+                Design Process
+              </h2>
+              <p class="text-gray-600 text-sm">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
             </div>
-            <h2 class="text-lg font-semibold text-gray-800 mb-2">
-              Supervision
-            </h2>
-            <p class="text-gray-600 text-sm">
-              The barn house captivates with its blend of rustic charm and
-              modern.
-            </p>
-          </div>
 
-          <!-- Budget Planning Card -->
-          <div class="bg-[#77AAEA] p-6 rounded-lg shadow">
-            <div class="text-gray-700 mb-4">
-              <img src="assets/budget-planning.png" alt="" />
+            <!-- Supervision Card -->
+            <div class="bg-[#A4DAC3] p-6 rounded-lg shadow">
+              <div class="text-gray-700 mb-4">
+                <img src="assets/vision.png" alt="" />
+              </div>
+              <h2 class="text-lg font-semibold text-gray-800 mb-2">
+                Supervision
+              </h2>
+              <p class="text-gray-600 text-sm">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
             </div>
-            <h2 class="text-lg font-semibold text-gray-800 mb-2">
-              Budget Planning
-            </h2>
-            <p class="text-gray-600 text-sm">
-              The barn house captivates with its blend of rustic charm and
-              modern.
-            </p>
+
+            <!-- Budget Planning Card -->
+            <div class="bg-[#77AAEA] p-6 rounded-lg shadow">
+              <div class="text-gray-700 mb-4">
+                <img src="assets/budget-planning.png" alt="" />
+              </div>
+              <h2 class="text-lg font-semibold text-gray-800 mb-2">
+                Budget Planning
+              </h2>
+              <p class="text-gray-600 text-sm">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
           </div>
         </div>
       </section>
@@ -373,63 +373,100 @@
       <section class="max-w-6xl mx-auto p-8 my-10 bg-white">
         <!-- Header Section -->
         <div class="text-center mb-8">
-            <button class="bg-green-100 text-green-600 px-4 py-2 rounded-full text-sm mb-4">→ Explore our Latest works</button>
-            <h1 class="text-2xl font-bold text-gray-900">Our Latest Portfolio</h1>
-            <p class="text-gray-600 mt-2">
-                The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.
-            </p>
+          <button
+            class="bg-[#ABEF5F33] text-black px-4 py-2 rounded-full text-sm mb-4"
+          >
+            <i class="fa-solid fa-arrow-right pr-3"></i>Explore our Latest works
+          </button>
+          <h1 class="text-5xl font-bold text-gray-900 my-2">
+            Our Latest Portfolio
+          </h1>
+          <p class="text-gray-600 mt-3">
+            The barn house captivates with its blend of rustic charm and modern
+            <br />
+            sophistication, featuring weathered wood, sleek metal accents.
+          </p>
         </div>
 
-        <!-- Portfolio Cards -->
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-6">
-            <!-- Portfolio Item -->
-            <div class="bg-white border rounded-lg shadow p-4">
-                <div class="border-dashed border-2 border-gray-300 rounded-lg mb-4 p-4 flex items-center justify-center h-48">
-                    <!-- Placeholder SVG -->
-                    <svg class="w-24 h-24 text-gray-400" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/></svg>
-                </div>
-                <h2 class="text-lg font-semibold text-gray-800">Commercial</h2>
-                <p class="text-gray-600 text-sm">
-                    The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern.
-                </p>
-                <a href="#" class="text-green-600 font-semibold mt-4 inline-flex items-center">
-                    View Details
-                    <svg class="w-4 h-4 ml-1" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2l8 8-8 8"/></svg>
-                </a>
+        <!-- Portfolio Cards 1-->
+        <div class="flex gap-6 mb-6">
+          <div class="flex items-center space-x-4 border p-3 rounded-lg w-[752px]">
+            <div class="">
+              <img
+                class="w-[450px] h-40 border-dashed border-2 border-gray-200 shadow-lg"
+                src="assets/img1.png"
+                alt=""
+              />
             </div>
-
-            <!-- Repeat Portfolio Items as Needed -->
-            <div class="bg-white border rounded-lg shadow p-4">
-                <div class="border-dashed border-2 border-gray-300 rounded-lg mb-4 p-4 flex items-center justify-center h-48">
-                    <svg class="w-24 h-24 text-gray-400" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/></svg>
-                </div>
-                <h2 class="text-lg font-semibold text-gray-800">Commercial</h2>
-                <p class="text-gray-600 text-sm">
-                    The barn house captivates with its blend of rustic charm and modern.
-                </p>
-                <a href="#" class="text-green-600 font-semibold mt-4 inline-flex items-center">
-                    View Details
-                    <svg class="w-4 h-4 ml-1" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2l8 8-8 8"/></svg>
-                </a>
+            <div>
+              <h3 class="text-lg font-semibold text-gray-800 my-2">Commercial</h3>
+              <p class="text-gray-600 text-sm">
+                The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .
+              </p>
+              <div class="flex items-center mt-4">
+                <a target="_blank" href="#" class="text-gray-600 flex gap-3 font-bold">Vew Details<i
+                  class="fa-solid fa-arrow-right w-6 h-6 flex items-center justify-center p-1 rounded-full bg-[#ABEF5F] mr-2 rotate-[-38deg]"
+                ></i></a>
+              </div>
             </div>
+          </div>
 
-            <!-- Repeat More Items as Needed -->
-            <div class="bg-white border rounded-lg shadow p-4">
-                <div class="border-dashed border-2 border-gray-300 rounded-lg mb-4 p-4 flex items-center justify-center h-48">
-                    <svg class="w-24 h-24 text-gray-400" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/></svg>
-                </div>
-                <h2 class="text-lg font-semibold text-gray-800">Commercial</h2>
-                <p class="text-gray-600 text-sm">
-                    The barn house captivates with its blend of rustic charm and modern.
-                </p>
-                <a href="#" class="text-green-600 font-semibold mt-4 inline-flex items-center">
-                    View Details
-                    <svg class="w-4 h-4 ml-1" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2l8 8-8 8"/></svg>
-                </a>
+          <div class="flex items-center space-x-4 border p-3 rounded-lg">
+            <div class="w-full">
+              <img
+                class="w-full h-40 border-dashed border-2 border-gray-200 shadow-lg"
+                src="assets/img2.png"
+                alt=""
+              />
             </div>
         </div>
-    </section>
-    <!-- our latast Portfolio section design end -->
+        </div>
+
+        <!-- Portfolio Cards 2-->
+        <div class="flex gap-6">
+          <div class="flex items-center space-x-4 border p-3 rounded-lg">
+            <div>
+              <img
+                class="w-[200px] h-40 border-dashed border-2 border-gray-200 shadow-lg"
+                src="assets/img3.png"
+                alt=""
+              />
+            </div>
+        </div>
+
+          <div class="flex items-center space-x-4 border p-3 rounded-lg">
+            <div>
+              <img
+                class="w-[300px] h-40 border-dashed border-2 border-gray-200 shadow-lg"
+                src="assets/img4.png"
+                alt=""
+              />
+            </div>
+            <div>
+              <h3 class="text-lg font-semibold text-gray-800 my-2">Commercial</h3>
+              <p class="text-gray-600 text-sm">
+                The barn house captivates with its blend of rustic charm and modern. 
+              </p>
+              <div class="flex items-center mt-4">
+                <a target="_blank" href="#" class="text-gray-600 flex gap-3 font-bold">Vew Details<i
+                  class="fa-solid fa-arrow-right w-6 h-6 flex items-center justify-center p-1 rounded-full bg-[#ABEF5F] mr-2 rotate-[-38deg]"
+                ></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="flex items-center space-x-4 border p-3 rounded-lg">
+            <div>
+              <img
+                class="w-[200px] h-40 border-dashed border-2 border-gray-200 shadow-lg"
+                src="assets/img5.png"
+                alt=""
+              />
+            </div>
+        </div>
+        </div>
+      </section>
+      <!-- our latast Portfolio section design end -->
     </main>
     <!-- main section end -->
     <!-- footer section  -->
